--- a/references/task5.ipynb
+++ b/references/task5.ipynb
@@ -1057,6 +1057,19 @@
     "- Now it is super clear that indeed things are getting hot on The Amazon, and that we went up from 297.1K to about 297.7K now. Feel free to pause the video now and to experiment with different resampling intervals.\n",
     "- So that's it for this task. You now know how to use grouped operations and to resample multidimentional time datasets. On the next task, we are going to learn how to merge and concatenate Xarray datasets and variables so that you can work with several datasets at once. Bye!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quiz\n",
+    "\n",
+    "- What of those are valid expressions in regards to groupings and aggregations?\n",
+    "    - [x] ds.groupby('year').mean()\n",
+    "    - [x] ds.resample({'time': '5y'}).mean()\n",
+    "    - [x] ds.groupby('year').mean(dim=['latitude'])\n",
+    "    - [x] ds.groupby(['year', 'latitude']).mean(dim=['longitude'])"
+   ]
   }
  ],
  "metadata": {
