--- a/references/task6.ipynb
+++ b/references/task6.ipynb
@@ -2863,6 +2863,18 @@
     "- It changed again! The concatenation worked! Feel free to pause the video to see how things are when you change the dates.\n",
     "- So that's it for this task. Now you know how to merge and concatenate data together on xarray. On next task, we will learn how to interface with pandas, and how to export data to NetCDF. See ya!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quiz\n",
+    "\n",
+    "- Check the true affirmations\n",
+    "    - [x] The xr.merge method allows you to append new variables to a existing Dataset\n",
+    "    - [x] The xr.concat method allows you to append new variables across a new dimension\n",
+    "    - [ ] The xr.merge method allows you to append new variables across a new dimension"
+   ]
   }
  ],
  "metadata": {
